--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,25 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="30dp"
+    android:background="@color/cardview_light_background"
     tools:context=".view.MainActivity">
 
-    <EditText
-        android:hint="Name of Person"
-        android:id="@+id/editSaveName"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
 
-    <Button
-        android:text="Save"
+    <android.support.design.widget.FloatingActionButton
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:id="@+id/buttonSaveName"
-        android:layout_below="@+id/editSaveName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/textViewName"
-        android:layout_below="@+id/buttonSaveName"
-        android:layout_width="match_parent"
+        android:src="@drawable/ic_add_black_24dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
